.. _changes_1.5.6:

1.5.6 (2015-04-14)
==================

- 1.5.5 was a brown-bag release which was missing files.

.. _changes_1.5.5:

1.5.5 (2015-04-14)
==================

- The JSONP renderer created JavaScript code in such a way that a callback
  variable could be used to arbitrarily inject javascript into the response
  object. https://github.com/Pylons/pyramid/pull/1626

.. _changes_1.5.4:

1.5.4 (2015-02-24)
==================

- Fix regression where ``pserve --reload`` would not work when running
  as a daemon.
  Backported from https://github.com/Pylons/pyramid/pull/1592

.. _changes_1.5.3:

1.5.3 (2015-02-22)
==================

- Work around an issue where ``pserve --reload`` would leave terminal echo
  disabled if it reloaded during a pdb session.
  Backported from https://github.com/Pylons/pyramid/pull/1577

- Fixed a failing unittest caused by differing mimetypes on various
  OS platforms. See https://github.com/Pylons/pyramid/issues/1405

- Overall improvments for the ``proutes`` command. Added ``--format`` and
  ``--glob`` arguments to the command, introduced the ``method``
  column for displaying available request methods, and improved the ``view``
  output by showing the module instead of just ``__repr__``.
  See: https://github.com/Pylons/pyramid/pull/1542

- The ``pyramid.renderers.JSONP`` renderer would raise an exception if used
  without a request object. It will now fallback to behave like
  the ``pyramid.renderers.JSON`` renderer if there is no request object to
  derive a callback from. See https://github.com/Pylons/pyramid/pull/1562

- Prevent "parameters to load are deprecated" ``DeprecationWarning``
  from setuptools>=11.3. See https://github.com/Pylons/pyramid/pull/1541

- Avoiding timing attacks against CSRF tokens. Backported from
  https://github.com/Pylons/pyramid/pull/1574

- ``pserve`` can now take a ``-b`` or ``--browser`` option to open the server
  URL in a web browser. See https://github.com/Pylons/pyramid/pull/1533
